# handmade-hero-project

./: CMakeLists.txt  README.md  build.bat  shell.bat
src/: handmade.c  handmade.cpp
